[project]
name = "concert-tracker"
version = "0.1.0"
description = "Track conerts"
authors = [{ name = "Matt Busche", email = "mrbusche@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "ruff==0.15.10",
    "beautifulsoup4==4.14.3",
    "playwright==1.58.0",
]

target-version = "py314"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
